# DeltaLangCompiler

./: .gitignore  CMakeLists.txt  astcontext.hpp  builtin_type.inc  decl.hpp  expression.cpp  expression.hpp  expressions.txt  filebuffer.hpp  keywordtrie.cpp  keywordtrie.hpp  lexer.cpp  lexer.hpp  literal_support.cpp  literal_support.hpp  operators.cpp  operators.hpp  parser.cpp  parser.hpp  sema.hpp  statement.hpp  testmain.cpp  token.hpp  tokentype.hpp  tokentype.inc  typeinfo.cpp  typeinfo.hpp  utils.hpp
deltac/: .clangd  CMakeLists.txt  expressions.txt
deltac/include/: CMakeLists.txt  astcontext.hpp  builtin_type.inc  charinfo.hpp  decl.hpp  declaration.hpp  expression.hpp  filebuffer.hpp  keywordtrie.hpp  lexer.hpp  literal_support.hpp  operators.hpp  ownership.hpp  parser.hpp  sema.hpp  span.hpp  statement.hpp  token.hpp  tokentype.hpp  tokentype.inc  typeinfo.hpp  utils.hpp
deltac/lib/: astcontext.cpp  charinfo.cpp  filebuffer.cpp  keywordtrie.cpp  lexer.cpp  literal_support.cpp  operators.cpp  parser.cpp  sema.cpp  tokentype.cpp  typeinfo.cpp
test/: CMakeLists.txt  example.dd  helloworld.dl  lexer_tests.cpp  numbers.dl  testtokentype.inc  unarycast.delta
